# syracuse-examples

./: .env.example  CLAUDE.md  LICENSE  README.md  main.py  main_requests.py  pyproject.toml
examples/: advanced.py  config.py  industries.py  locations.py  organizations.py  stories.py
examples/httpx/: advanced.py  industries.py  locations.py  organizations.py  stories.py
examples/requests/: advanced.py  industries.py  locations.py  organizations.py  stories.py
tests/: conftest.py  fixtures.py  test_advanced.py  test_industries.py  test_locations.py  test_main.py  test_organizations.py  test_stories.py
tests/httpx/: test_advanced.py  test_industries.py  test_locations.py  test_organizations.py  test_stories.py
tests/requests/: test_advanced.py  test_industries.py  test_locations.py  test_organizations.py  test_stories.py
