[project]
name = "syracuse-examples"
version = "0.1.0"
description = "Example scripts for the Syracuse Company News API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "requests",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "respx",
    "responses",
]
